<resources>
    <string name="app_name">TuneHive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_signup_first">TuneHive</string>
    <string name="login_text">Log In</string>
    <string name="btn_signup_text">Sign up free</string>
    <string name="signup_text">Sign up</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="cd_backgroud_image">Backgroud image</string>
    <string name="btn_login_text">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tittle_community">Community</string>
    <string name="title_my_music">My Music</string>
    <string name="title_profile">Profile</string>
    <string name="placeholder_username">Haidar Ihsan</string>
    <string name="song_title_text">Song Title</string>
    <string name="album_cover_desc">Album Cover</string>
    <string name="artist_image">Artist Image</string>
    <string name="artist_name_text">Artist Name</string>
    <string name="options_btn_text">Options</string>
    <string name="previous">previous\n</string>
    <string name="play_pause">play pause\n</string>
    <string name="next">next\n</string>
    <string name="back">back to previous page</string>
    <string name="favorite">favorite</string>
    <string name="download">download</string>
    <string name="like">Like Button</string>
    <string name="comment">Comment Button</string>
    <string name="share">Share Button</string>
    <string name="user_avatar">User Avatar</string>
    <string name="fab_add_post">Add Post</string>
</resources>