<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tunehive.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.tunehive.ui.main.community.CommunityFragment"
        android:label="@string/tittle_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_mymusic"
        android:name="com.example.tunehive.ui.main.mymusic.MyMusicFragment"
        android:label="@string/title_my_music"
        tools:layout="@layout/fragment_my_music" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tunehive.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>