<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkgrey">

    <LinearLayout
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:background="@android:color/transparent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/uploadMusicLabel"/>
        <TextView
            android:id="@+id/postLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Post"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/uploadMusic"
            app:layout_constraintStart_toEndOf="@id/backButton"
            />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/postContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/post">

        <LinearLayout
            android:id="@+id/profileContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <!-- User's Avatar -->
            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_person_white"
                android:contentDescription="@string/user_avatar"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/userName"/>


            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Danang Ihsan"
                android:textSize="14sp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnFollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Follow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Post Content (to display the original post) -->
    <TextView
        android:id="@+id/postText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Original Post Content"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postContainer" />

    <!-- Interactions (like, comment, share) -->
    <LinearLayout
        android:id="@+id/interactions"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/postText"
        app:layout_constraintBottom_toTopOf="@id/commentLayout"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Like Button and Like Count -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/like_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_like_border"
                android:contentDescription="@string/like" />

            <!-- Like Count Text -->
            <TextView
                android:id="@+id/likeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="14sp"
                android:textColor="#FFFFFF"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/comment_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_comment_border"
            android:contentDescription="@string/comment"
            android:layout_marginStart="24dp" />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share"
            android:layout_marginStart="24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/commentLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:weightSum="1"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/interactions">

        <!-- Comment Input -->
        <EditText
            android:id="@+id/commentInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Write your reply"
            android:textColor="#FFFFFF"
            android:background="@drawable/rounded_edit_text"
            android:maxLines="1"
            android:padding="8dp" />

        <!-- Reply Button -->
        <Button
            android:id="@+id/replyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Reply"
            android:textColor="#FFFFFF"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Comments RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/commentLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
